修改文件: _posts/知识储备.md

--- a/_posts/知识储备.md
+++ b/_posts/知识储备.md
@@ -410,6 +410,7 @@ mallocBlock 栈copy到堆
 __strongSelf是要确保self不被释放，在block执行结束会自动释放。
  25. https？如何防止抓包？
 
+
 Https的流程
 三次握手
 TLS
@@ -418,4 +419,13 @@ http传输
 可以通过SSL pinning 原理是将服务端的证书放在客户端进行校验，防止中间人攻击。
 也可以通过对接口参数和返回数据进行加密。
 
-     
+ 26. mongoFix的原理，jspatch的原理
+
+JSPatch通过JSScriptCore和Runtime来运行时修改原来的代码，比如方法替换等等。
+Mongofix利用Yacc解析器来进行文本文件的解析，然后动态插入方法。利用libffi，把原始方法进行替换，换成了下面这个方法。就是在replaceIMP这个方法之后进还是经过组装得到NSInvocation进行动态调用
+
+  27. C语言数组的查找时间复杂度，链表的查找时间复杂度
+数组的查找复杂度O（1），链表是O（n），数组增改删时间复杂度是O（n），链表是O（1）
+
+  28. iOS 14的适配
+新增了本地网络权限的授权弹窗，还有照片的权限可选择App使用的照片
