修改文件: _posts/知识储备.md

--- a/_posts/知识储备.md
+++ b/_posts/知识储备.md
@@ -19,12 +19,37 @@ block赋值给强引用对象；
 API使用了usingBlock:
 
  3. 你使用了OC的category来实现nil的NSDictionary的crash， 那么请问category的存储位置？
-
++load 方法在runtime加载类和分类时调用，根据方法地址直接调用。
 category是类别，一般用于给已存在的类，添加类和实例方法。当添加了category的时候，会在程序启动的时候通过load_images来载入category，把category的实例方法、协议以及属性添加到类上，类方法和协议添加到类的metaclass上。需要注意category不是完全替换方法，只是将方法放在了原方法的前面，这样调用方法时找到第一个方法就直接返回。category通过runtime的关联对象可以添加实例变量。关联对象是由AssociationsManager来管理的，AssociationsManager里面是由一个静态AssociationsHashMap来存储所有的关联对象的。这相当于把所有对象的关联对象都存在一个全局map里面。而map的的key是这个对象的指针地址（任意两个不同对象的指针地址一定是不同的），而这个map的value又是另外一个AssociationsHashMap，里面保存了关联对象的键值对。销毁的时候调用objc_destructInstance函数的_object_remove_assocations做关联对象的清理工作。
+
+```objc
+struct category_t {
+    const char *name;
+    classref_t cls;
+    struct method_list_t *instanceMethods;
+    struct method_list_t *classMethods;
+    struct protocol_list_t *protocols;
+    struct property_list_t *instanceProperties;
+    // Fields below this point are not always present on disk.
+    struct property_list_t *_classProperties;
+
+    method_list_t *methodsForMeta(bool isMeta) {
+        if (isMeta) return classMethods;
+        else return instanceMethods;
+    }
+
+    property_list_t *propertiesForMeta(bool isMeta, struct header_info *hi);
+    
+    protocol_list_t *protocolsForMeta(bool isMeta) {
+        if (isMeta) return nullptr;
+        else return protocols;
+    }
+};
+```
 
  4. 和内存相关的属性有哪些？weak是如何实现的？
 
-weak: 弱引用，用于修饰OC对象类型的数据,修饰的对象在释放后，指针地址会自动被置为nil
+weak: 弱引用，用于修饰OC对象类型的数据,引用计数不会加一，修饰的对象在释放后，指针地址会自动被置为nil
 
 strong:强引用，用于修饰一些OC对象类型的数据如：（NSNumber，NSString，NSArray、NSDate、NSDictionary、模型类等），它被一个强指针引用着，是一个强引用。在ARC的环境下等同于retain，这一点区别于weak。它是一我们通常所说的指针拷贝（浅拷贝），内存地址保持不变，只是生成了一个新的指针，新指针和引用对象的指针指向同一个内存地址，没有生成新的对象，只是多了一个指向该对象的指针。
 注意：由于使用的是一个内存地址，当该内存地址存储的内容发生变更的时候，会导致属性也跟着变
@@ -46,9 +71,42 @@ retain:MRC下的属性等同于arc下的strong。
 我负责火车票主流程的业务，在选坐席和选乘客下单的流程。
 解决了大交通列表页卡顿的问题，滑动时为了展示更多区域，底部筛选栏要隐藏，停止滑动筛选栏展示，在ScrollDidBeginScroll时和EndScroll,发现执行了[self.view layoutIfNeed]，这会加重CPU的计算，导致出现滑动卡顿的现象，只需将[self.bottomView layoutIfNeed]
 
-CTMediator 使用的是运行时解耦
+设计模式单例CTMediator 使用的是运行时解耦
 从代码中同时还能看出只有满足 Target_ 前缀的对象和 Action_ 前缀的方法才能被 CTMediator 使用。这时，我们可以看出中间者架构的优势，也就是利于统一管理，可以轻松管控制定的规则
 
+CTMediator主要采用target-action的方式实现组件间解耦合，本身功能完全独立，不依赖任何组件模块。
+主要结构如下：
+CTMediator作为中介者，是各个组件的进行信息通讯的中枢。
+主要实现方案分两种情况：
+1.首先利用runtime进行反射，将类字符串和方法字符串转换成类和SEL方法选择子：
+```objc
+SEL action = NSSelectorFromString(@"Action_response:");
+NSObject *target = [[NSClassFromString(@"Target_NoTargetAction") alloc] init];
+//然后调用cocoa touch框架提供的方法直接调用
+[target performSelector:action withObject:params];
+ ```
+
+2.或者使用cocoa touch提供的命令模式，将消息和消息接受者封装成一个对象，进行执行。
+首先，利用target-action生成方法签名
+然后，创建NSInvocation对象，进行执行invoke。并拿到返回的结果。
+代码如下：
+利用方法签名，NSInvocation实现
+```objc
+NSMethodSignature* methodSig = [target methodSignatureForSelector:action];
+if(methodSig == nil) {
+    return nil;
+}
+const char* retType = [methodSig methodReturnType];
+if (strcmp(retType, @encode(void)) == 0) {
+    NSInvocation *invocation = [NSInvocation invocationWithMethodSignature:methodSig];
+    [invocation setArgument:&params atIndex:2];
+    [invocation setSelector:action];
+    [invocation setTarget:target];
+    [invocation invoke];
+    return nil;
+}
+ ```
+ 
 使用CTMediator返回TrainHomeVC首页，以及获取火车车站，以及调用JS脚本，方便RN模块调用以及方便其他BU调用。
 在ZTTrain的工程里新建Target_Train类。暴露方法
 ```
@@ -84,6 +142,25 @@ CTMediator 使用的是运行时解耦
 开发RN的好处是，能逐渐的抹平Android和iOS开发技术栈带来的问题，使用一套代码，两个平台上线，理论上人效可以提升一倍，支持的业务需求也可以提升一倍。
 
  9. iOS崩溃你有什么研究心得？
+
+一、EXC_BAD_ACCESS
+野指针引起的崩溃
+二、SIGSEGV
+段错误信息（SIGSEGV）是操作系统产生的一个更严重的问题。当硬件出现错误、访问不可读的内存地址或向受保护的内存地址写入数据时，就会发生这个错误。
+三、SIGBUS
+总线错误信号（SIGBUG）代表无效内存访问，即访问的内存是一个无效的内存地址。也就是说，那个地址指向的位置根本不是物理内存地址（它可能是某个硬件芯片的地址）。
+四、SIGTRAP
+SIGTRAP代表陷阱信号。它并不是一个真正的崩溃信号。它会在处理器执行trap指令发送。LLDB调试器通常会处理此信号，并在指定的断点处停止运行。如果你收到了原因不明的SIGTRAP，先清除上次的输出，然后重新进行构建通常能解决这个问题。
+五、EXC_ARITHETIC
+当要除零时，应用会收到EXC_ARITHMETIC信号。这个错误应该很容易解决。
+六、SIGILL
+SIGILL代表signal illegal instruction(非法指令信号)。当在处理器上执行非法指令时，它就会发生。执行非法指令是指，将函数指针会给另外一个函数时，该函数指针由于某种原因是坏的，指向了一段已经释放的内存或是一个数据段。有时你收到的是EXC_BAD_INSTRUCTION而不是SIGILL，虽然它们是一回事，不过EXC_等同于此信号不依赖体系结构。
+七、SIGABRT
+SIGABRT代表SIGNAL ABORT（中止信号）。当操作系统发现不安全的情况时，它能够对这种情况进行更多的控制；必要的话，它能要求进程进行清理工作。在调试造成此信号的底层错误时，并没有什么妙招。Cocos2d或UIKit等框架通常会在特定的前提条件没有满足或一些糟糕的情况出现时调用C函数abort（由它来发送此信号）。当SIGABRT出现时，控制台通常会输出大量的信息，说明具体哪里出错了。由于它是可控制的崩溃，所以可以在LLDB控制台上键入bt命令打印出回溯信息。
+八、看门狗超时
+这种崩溃通常比较容易分辨，因为错误码是固定的0x8badf00d。在iOS上，它经常出现在执行一个同步网络调用而阻塞主线程的情况。因此，永远不要进行同步网络调用。
+
+
 
 尽量使用真机运行，同时在Xcode的scheme的diagnoise，勾选Thread Sanitizer 来验证是否存在多线程漏洞，使用Address Sanitizer来调试访问野指针。
 
@@ -175,7 +252,7 @@ Address Sanitizer不能检测内存泄露，访问未初始化的内存或整形
 离屏渲染触发的场景有以下：
 
 圆角（同时设置layer.masksToBounds = YES、layer.cornerRadius大于0）
-图层蒙版
+图层蒙版；iOS9之后并不会产生离屏渲染，同时设置图片时，才会触发离屏渲染。
 
 阴影，layer.shadowXXX，如果设置了layer.shadowPath就不会产生离屏渲染
 遮罩，layer.mask
@@ -301,7 +378,18 @@ _objc_init方法来注册回调函数，重新加载images，执行map_images、
 在一堆数据中，找到一个基准，以这个基准分为两部分，一部分是比这个基准小的数据放在一起，一部分是比这个基准大于等于的数据放在一起；在基准小的数据再次找到一个基准，依次进行N次，直到数据顺序排列。
 
  16. 如何实现组件化的？
+业务间耦合较多，整体项目编译耗时等，渐渐无法满足业务开发需求
+项目是单一工程的架构模式，这也是常见的iOS项目架构模式，但是一旦项目整体业务增多，扩张出相对较为独立的业务模块，这种架构就会带来一些问题，例如：
 
+业务间代码层面耦合太重，业务之间隔离不明确：由于各业务间代码存在较多的耦合，经常出现某个业务线功能开发迭代影响其他业务线，出现代码冲突，影响其他业务功能。
+
+项目整体源码较多，编译耗时久：各业务开发人员主要开发各自业务线需求，但是需要编译整个项目，耗时较多，影响开发效率。
+
+1）业务解耦，使得各业务模块可以独立运行，同时可以组合编译打包
+
+2）拆分基础组件，抽离出基础组件 Library
+
+3）各业务间通信和业务交叉调用的实现
  17. 什么是里氏替换原则？
 
 单一职责原则告诉我们实现类要职责单一；
@@ -312,7 +400,7 @@ _objc_init方法来注册回调函数，重新加载images，执行map_images、
 
  18. md5和rsa是如何加密？
 
-MD5,SHA：消息摘要算法（也叫哈希算法），不可解密（不可逆）；消耗资源少，速度快；一般用做信息签名，不用在具体业务数据传输的加解密，而用在信息的签名上。
+MD5,SHA：消息摘要算法（也叫哈希算法），不可解密（不可逆）；消耗资源少，速度快；一般用做信息签名，不用在具体业务数据传输的加解密，而用在确保信息传输完成一致。
 
 RSA：非对称加密算法；可以解密（私钥/公钥加密=>公钥/私钥解密）；消耗资源多，速度慢；一般用户SSL协商密钥，不用在具体业务数据传输的加解密；
 
@@ -349,6 +437,7 @@ json的处理（iOS 自带的NSJSONSerialization，Jsonkit，SBJson）
 算法的优化（核心算法的优化，例如有些app 有个 联系人姓名用汉语拼音的首字母排序）
 三、操作流畅度优化
 Tableview 优化（tableview cell的加载优化）
+UICollectionView iOS 10 isPrefetchingEnabled  预加载
 ViewController加载优化（不同view之间的跳转，可以提前准备好数据）
 四、数据库的优化
 数据库设计上面的重构
@@ -403,16 +492,36 @@ for (int i = 0; i < 1000000; i++) {
 ```
  24. Block的类型？__strongSelf为什么要使用这个？
 
-globalBlock
-stackBlock
-mallocBlock 栈copy到堆
+globalBlock   没有访问auto变量
+stackBlock    访问了auto变量
+mallocBlock   栈copy到堆     引用计数加1
 
+block的变量捕获
+局部变量 auto 值传递
+局部变量 static 指针传递
+全局变量 直接访问
+
+在ARC下，编译器会自动将栈block复制到堆上
+block作为函数返回值
+block赋值给__strong指针时
+block作为gcd api的方法参数时
+block作为使用usingBlock的方法参数时
+__block 不能修饰全局变量、静态变量，编译器会将__block变量包装成一个对象
 __strongSelf是要确保self不被释放，在block执行结束会自动释放。
  25. https？如何防止抓包？
 
 
 Https的流程
+![https](https://www.runoob.com/wp-content/uploads/2018/09/https-intro.png)
 三次握手
+
+由客户端发起请求
+服务端接收后，传送证书
+客户端解析证书，传输加密信息，服务端解析信息，传输加密后的信息，客户端解密信息。再由客户端响应建立连接。
+三次握手是为了防止服务端超时，造成资源浪费。
+
+四次挥手
+
 TLS
 http传输
 多了TLS的步骤
@@ -421,11 +530,71 @@ http传输
 
  26. mongoFix的原理，jspatch的原理
 
-JSPatch通过JSScriptCore和Runtime来运行时修改原来的代码，比如方法替换等等。
+JSPatch通过JSScriptCore和Runtime运行时修改原来的代码，比如方法替换等等。
 Mongofix利用Yacc解析器来进行文本文件的解析，然后动态插入方法。利用libffi，把原始方法进行替换，换成了下面这个方法。就是在replaceIMP这个方法之后进还是经过组装得到NSInvocation进行动态调用
 
   27. C语言数组的查找时间复杂度，链表的查找时间复杂度
 数组的查找复杂度O（1），链表是O（n），数组增改删时间复杂度是O（n），链表是O（1）
 
   28. iOS 14的适配
+
 新增了本地网络权限的授权弹窗，还有照片的权限可选择App使用的照片
+
+  29. 非集合copy和集合copy
+
+在非集合类对象中：对immutable对象进行copy操作，是指针复制，mutableCopy操作时内容复制；对mutable对象进行copy和mutableCopy都是内容复制。用代码简单表示如下：
+```objc
+[immutableObject copy] // 浅复制
+[immutableObject mutableCopy] //深复制
+[mutableObject copy] //深复制
+[mutableObject mutableCopy] //深复制
+```
+在集合类对象中，对immutable对象进行copy，是指针复制，mutableCopy是内容复制；对mutable对象进行copy和mutableCopy都是内容复制。但是：集合对象的内容复制仅限于对象本身，对象元素仍然是指针复制。用代码简单表示如下：
+```objc
+[immutableObject copy] // 浅复制
+[immutableObject mutableCopy] //单层深复制
+[mutableObject copy] //单层深复制
+[mutableObject mutableCopy] //单层深复制
+```
+浅拷贝、深拷贝
+浅拷贝是指针复制，深拷贝是内容复制
+什么叫指针复制？
+两个指针指向同一个内存地址，修改内存地址的内容会影响两个指针指向的内存。
+什么叫内容复制
+两个指针地址指向地址不同，内存地址的内容是相同的
+ 30. 两个线程执行i++各50次，结果是什么？
+i++只需要执行一条指令，并不能保证多个线程i++，操作同一个i，可以得到正确的结果。因为还有寄存器的因素，多个cpu对应多个寄存器。每次要先把i从内存复制到寄存器，然后++，然后再把i复制到内存中，这需要至少3步。从这个意义上讲，说i++是原子的并不对。
+寄存器存入值，没有写内存会导致，另一个线程从内存读取值
+结果是2～100之间的范围
+ 
+ 31. Class对象在内存存储的信息，MetaClass呢？
+```objc
+struct objc_class : objc_object {
+    // Class ISA;
+    Class superclass;
+    cache_t cache;             // formerly cache pointer and vtable //方法缓存
+    class_data_bits_t bits;  
+}
+```
+isa指针							
+superclass指针
+类的属性									类方法
+类的协议
+类的对象方法
+类的成员变量
+ 32. NSDictionary和NSMutableArray的底层实现
+NSDIctionary是哈希表
+NSMutableArray是环形缓冲区。
+33. RunLoop四个类型
+source0:触摸事件处理
+source1:基于port的线程间通信
+timers:NSTimer
+Observers: 监听runloop的状态、UI刷新、Autorelease pool的释放
+
+使用CADisplayLink和runloop实现一个fps监控
+
+控制线程生命周期、线程保活、解决NSTimer滑动停止工作的问题、监控应用卡顿、性能优化 
+34. 使用CADisplayLink、NSTimer注意？
+会对target强引用，
+35. 
+
