修改文件: _posts/知识储备.md

--- a/_posts/知识储备.md
+++ b/_posts/知识储备.md
@@ -596,5 +596,29 @@ Observers: 监听runloop的状态、UI刷新、Autorelease pool的释放
 控制线程生命周期、线程保活、解决NSTimer滑动停止工作的问题、监控应用卡顿、性能优化 
 34. 使用CADisplayLink、NSTimer注意？
 会对target强引用，
-35. 
+weak实现原理
+35. 反转单链表
+```java
+private ListNode reverseList(ListNode head) {
+		if(head == null || head.next == null) return head;
+		// 递归实现 性能低
+//		ListNode reverseNode = reverseList(head.next);
+//		head.next.next = head;
+//		head.next = null;
+//		return reverseNode;
+		
+		// 非递归实现
+		
+		ListNode newNode = null;
+		while(head != null) {
+			ListNode tmpNode = head.next;
+			head.next = newNode;
+			newNode = head;
+			head = tmpNode;
+		}
+		
+		return newNode;
+		
+	}
+```
 
