修改文件: _posts/知识储备.md

--- a/_posts/知识储备.md
+++ b/_posts/知识储备.md
@@ -19,7 +19,7 @@ block赋值给强引用对象；
 API使用了usingBlock:
 
  3. 你使用了OC的category来实现nil的NSDictionary的crash， 那么请问category的存储位置？
-因为在运行期即编译完成后，对象的内存布局已经确定，如果添加实例变量就会破坏类的内部布局，这对编译型语言来说是灾难性的
+无法添加成员变量，因为在运行期即编译完成后，对象的内存布局已经确定，如果添加实例变量就会破坏类的内部布局，这对编译型语言来说是灾难性的
 +load 方法在runtime加载类和分类时调用，根据方法地址直接调用。
 category是类别，一般用于给已存在的类，添加类和实例方法。当添加了category的时候，会在程序启动的时候通过load_images来载入category，把category的实例方法、协议以及属性添加到类上，类方法和协议添加到类的metaclass上。需要注意category不是完全替换方法，只是将方法放在了原方法的前面，这样调用方法时找到第一个方法就直接返回。category通过runtime的关联对象可以添加实例变量。关联对象是由AssociationsManager来管理的，AssociationsManager里面是由一个静态AssociationsHashMap来存储所有的关联对象的。这相当于把所有对象的关联对象都存在一个全局map里面。而map的的key是这个对象的指针地址（任意两个不同对象的指针地址一定是不同的），而这个map的value又是另外一个AssociationsHashMap，里面保存了关联对象的键值对。销毁的时候调用objc_destructInstance函数的_object_remove_assocations做关联对象的清理工作。
 
